# impulse

./: .gitignore  .svlint.toml  CMakeLists.txt  README.md  multiplier.vcd  test  test.gtkw  test.vcd  test2.vcd
concept/: README.md  mixing.ipynb  noise.ipynb  sawtooth.ipynb  spectogram.ipynb  square.ipynb
docs/: .gitkeep  build_tools.md  internal_workings.md  preamble.tex
docs/notes/: todo.md
rtl/: impulse_top.sv  multiplier.sv  note_to_period.sv  osc_noise.sv  osc_square.sv  sillyfunction.sv  test.sv
scripts/: cxxrtl.ys  ecp5.ys  gen_note_to_period.py  write_audio.py
testbench/: write_audio.py
testbench/inverter/: sillyfunction_tb.sv
testbench/multiplier/: multiplier2_tb.sv  multiplier_tb.sv
testbench/osc_noise/: osc_noise_tb.sv
